# goose-cc

./: README.md
crates/goose/: Cargo.toml
crates/goose-cli/src/: cli.rs
crates/goose-cli/src/commands/: agent_import.rs  configure.rs  mod.rs
crates/goose-cli/src/session/: builder.rs  completion.rs  input.rs  mod.rs  output.rs
crates/goose-context-core/: Cargo.toml
crates/goose-context-core/src/: lib.rs
crates/goose-server/src/routes/: action_required.rs  agent.rs
crates/goose/examples/: office_tools_e2e.rs
crates/goose/src/: agent_import.rs  lib.rs  worktree.rs
crates/goose/src/acp/: provider.rs  response_builder.rs  server.rs
crates/goose/src/agents/: agent.rs  large_response_handler.rs  prompt_manager.rs  subagent_handler.rs  subagent_task_config.rs  tool_confirmation_router.rs
crates/goose/src/agents/platform_extensions/: context_core.rs  mod.rs  office.rs  summon.rs
crates/goose/src/config/: extensions.rs  goose_mode.rs
crates/goose/src/permission/: permission_inspector.rs
crates/goose/src/providers/: amp_acp.rs  claude_acp.rs  claude_code.rs  codex.rs  codex_acp.rs  copilot_acp.rs  pi_acp.rs
crates/goose/src/session/: session_manager.rs
crates/goose/tests/: agent.rs  providers.rs
ui/: pnpm-workspace.yaml
ui/desktop/: README.md  openapi.json  package.json  vite.config.mts  vite.renderer.config.mts
ui/desktop/scripts/: ensure-electron-binary.mjs
ui/desktop/src/api/: index.ts  types.gen.ts
ui/desktop/src/components/: ToolApprovalButtons.tsx  ToolCallConfirmation.test.tsx  ToolCallConfirmation.tsx
(+6 files in other folders)
