[package]
name = "goose-context-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Context artifact storage and compact tool result summaries for goose"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
